terraform-backend/alb.tf
# Security group ALB
resource "aws_security_group" "alb_backend_sg" {
    name = "alb-backend-sg-tf"
    description = "Allow inboud and outbound traffic"
    vpc_id = aws_vpc.main.id

    ingress {
        description = "Allow HTTP traffic from ALB"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "Allow HTTPS traffic from ALB"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "Allow HTTP traffic from ALB"
        from_port   = 8080
        to_port     = 8080
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
